# nba-toronto-1

./: README.md  package-lock.json  package.json
nba-toronto-1/: package-lock.json  package.json  theme.css  vite.config.ts
nba-toronto-1/src/: index.css  main.tsx  routeTree.gen.ts
nba-toronto-1/src/api/: players-api.ts
nba-toronto-1/src/components/: navbar.tsx
nba-toronto-1/src/components/homepage/: homepage.tsx
nba-toronto-1/src/components/players/: player-card.tsx  player-information.tsx
nba-toronto-1/src/components/standings/: table.tsx
nba-toronto-1/src/queries/: players.ts
nba-toronto-1/src/routes/: __root.tsx  index.tsx  players.tsx  standings.tsx
nba-toronto-1/src/types/: players.ts  standings.ts  team.ts
server/: .gitignore  Untitled.ipynb  Untitled1.ipynb  feature_columns.pkl  main.py  prediction.py  pyproject.toml  raptor_team.py  standings.py
