[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "joblib>=1.5.2",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "nba-api>=1.10.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.35.0",
]
